# mbed-bootloader

./: .gitignore  CMakeLists.txt  build.sh  define.txt  rx65n-flags.cmake  toolchain.cmake
SDK/Renesas_RX65N-CK/: linker_script.ld  main.c
SDK/Renesas_RX65N-CK/FIT/r_bsp/: platform.h
SDK/Renesas_RX65N-CK/FIT/r_bsp/board/rx65n/: vecttbl.c
SDK/Renesas_RX65N-CK/FIT/r_bsp/mcu/all/: r_compiler.h
SDK/Renesas_RX65N-CK/r_config/: r_bsp_config.h  r_flash_rx_config.h
configs/: internal_kvstore_with_sd.json  kvstore_and_fw_candidate_on_sd.json
modules/mbedtls/include/mbedtls/: config.h
modules/metadata-header/source/: arm_uc_metadata_header_v2.c
modules/storage/FlashIAP/: FlashIAP_Renesas_RX65N-CK.cpp
modules/storage/pal-flashiap/source/: arm_uc_pal_flashiap_implementation.c  arm_uc_pal_flashiap_mbed.cpp
source/: active_application.cpp  bootloader_common.cpp  bootloader_common.h  main.cpp  upgrade.cpp
